Trying to fix Travis CI build issue by adding         <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> to samples pom.xml

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -64,6 +64,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <excludedGroups>${oasp.test.excluded.groups}</excludedGroups>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
     </plugins>
