--- a/samples/server/pom.xml
+++ b/samples/server/pom.xml
@@ -23,6 +23,14 @@
       <artifactId>oasp4j-sample-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.oasp.js</groupId>
+      <artifactId>oasp4js-sample</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <type>zip</type>
+      <classifier>web</classifier>
+      <scope>runtime</scope>
+    </dependency>
  </dependencies>
 
   <profiles>
