Changes to pom files for combined deployment

--- a/pom.xml
+++ b/pom.xml
@@ -564,12 +564,12 @@
     <repository>
       <id>oasp.releases</id>
       <name>OASP Releases</name>
-      <url>http://oasp-ci.cloudapp.net/nexus/content/repositories/releases/</url>
+      <url>https://devon.s2-eu.capgemini.com/nexus/content/repositories/releases/</url>
     </repository>
     <snapshotRepository>
       <id>oasp.snapshots</id>
       <name>OASP Snapshots</name>
-      <url>http://oasp-ci.cloudapp.net/nexus/content/repositories/snapshots/</url>
+      <url>https://devon.s2-eu.capgemini.com/nexus/content/repositories/snapshots/</url>
     </snapshotRepository>
     <site>
       <id>oasp-site</id>
