--- a/samples/server/pom.xml
+++ b/samples/server/pom.xml
@@ -24,9 +24,17 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <!--
       <groupId>io.oasp.js</groupId>
       <artifactId>oasp4js-sample</artifactId>
       <version>1.0.0-SNAPSHOT</version>
+      <type>zip</type>
+      <classifier>web</classifier>
+      <scope>runtime</scope>
+      -->
+      <groupId>${client.groupId}</groupId>
+      <artifactId>${client.artifactId}</artifactId>
+      <version>${client.version}</version>
       <type>zip</type>
       <classifier>web</classifier>
       <scope>runtime</scope>
