--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -60,6 +60,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
+          <additionalDependencies> 
+            <additionalDependency> 
+              <groupId>javax.interceptor</groupId> 
+              <artifactId>javax.interceptor-api</artifactId> 
+              <version>1.2</version> 
+            </additionalDependency> 
+          </additionalDependencies>
           <!--<notree>true</notree>-->
           <show>private</show>
           <encoding>${project.reporting.outputEncoding}</encoding>
