--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -69,10 +69,18 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
     </dependency>
-
+    
+    <!-- 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+     -->
+     
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -235,11 +243,20 @@
       <artifactId>scala-library</artifactId>
       <version>2.10.4</version>
     </dependency>
+   
+    <!--   
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-ws</artifactId>
     </dependency>
-
+     -->
+        
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web-services</artifactId>
+      <version>1.5.2.RELEASE</version>
+    </dependency>
+     
     <dependency>
       <groupId>com.mysema.querydsl</groupId>
       <artifactId>querydsl-apt</artifactId>
