Spring Boot Upgrade MariaDB integration modified files

--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -28,4 +28,4 @@ database.migration.clean=false
 
 
 #UnComment the following profile 'mysql' if the database used is MariaDB 10.0.27
-#spring.profiles.active=mysql
+#spring.profiles.active=junit,mysql
