--- a/samples/server/pom.xml
+++ b/samples/server/pom.xml
@@ -23,6 +23,16 @@
       <artifactId>oasp4j-sample-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- CLIENT JAR DEPENDENCY -->
+    <dependency>
+      <groupId>com.capgemini.devonfw</groupId>
+      <artifactId>extjs-sample</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <type>zip</type>
+      <classifier>web</classifier>
+      <scope>runtime</scope>
+    </dependency>
+    <!-- END CLIENT JAR DEPENDENCY -->
  </dependencies>
 
   <profiles>
@@ -38,6 +48,7 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <executions>
+            <!-- 
               <execution>
                 <id>npm-install</id>
                 <phase>generate-sources</phase>
@@ -94,6 +105,7 @@
                   <workingDirectory>${js.client.dir}</workingDirectory>
                 </configuration>
               </execution>
+               -->
             </executions>
           </plugin>
         </plugins>
@@ -128,8 +140,23 @@
           </execution>
         </executions>
       </plugin>
-
+      <!-- CLIENT PLUGIN -->
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <overlays>
+            <overlay>
+              <groupId>com.capgemini.devonfw</groupId>
+              <artifactId>extjs-sample</artifactId>
+              <type>zip</type>
+              <classifier>web</classifier>
+              <targetPath>jsclient</targetPath>
+            </overlay>
+          </overlays>
+        </configuration>
+      </plugin>
+      <!-- END CLIENT PLUGIN -->
     </plugins>
   </build>
-
 </project>
