--- a/samples/core/src/main/resources/application.properties
+++ b/samples/core/src/main/resources/application.properties
@@ -14,6 +14,7 @@ security.expose.error.details=false
 security.cors.enabled=false
 spring.jpa.hibernate.ddl-auto=validate
 
+#Hibernate NamingStrategy has been deprecated and then removed in favor of two step naming strategy ImplicitNamingStrategy and PhysicalNamingStrategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
