--- a/samples/core/src/main/resources/config/application-orcl.properties
+++ b/samples/core/src/main/resources/config/application-orcl.properties
@@ -1,6 +1,8 @@
 spring.jpa.database=oracle
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-flyway.locations=classpath:db/migration/orcl
 #The following can be enabled in case of any errors in the SQL to investigate the issue by looking at SQL
 #spring.jpa.show-sql=true
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=oasp4j
+spring.datasource.password=oasp4j
