oasp/oasp4j#358: support for JAX-RS and JAX-WS clients Added new modules json, service, cxf-client, cxf-server Added spring boot auto-starters for CXF Added support for WebService auto discovery and registration

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -17,7 +17,11 @@
     <module>test</module>
     <module>configuration</module>
     <module>beanmapping</module>
+    <module>service</module>
+    <module>json</module>
     <module>rest</module>
+    <module>cxf-client</module>
+    <module>cxf-server</module>
     <module>security</module>
     <module>jpa</module>
     <module>jpa-envers</module>
