--- a/modules/jpa-envers/pom.xml
+++ b/modules/jpa-envers/pom.xml
@@ -16,7 +16,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.oasp.java.modules</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>oasp4j-jpa</artifactId>
     </dependency>
     <dependency>
@@ -25,7 +25,7 @@
     </dependency>
 
     <dependency>
-      <groupId>io.oasp.java.modules</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>oasp4j-test</artifactId>
       <scope>test</scope>
     </dependency>
