--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -38,15 +38,14 @@
       <artifactId>oasp4j-security</artifactId>
     </dependency>
 
-
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
-      <artifactId>oasp4j-rest</artifactId>
+      <artifactId>oasp4j-cxf-client</artifactId>
     </dependency>
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
-      <artifactId>oasp4j-basic</artifactId>
+      <artifactId>oasp4j-cxf-server</artifactId>
     </dependency>
 
     <dependency>
@@ -94,19 +93,6 @@
       <artifactId>jstl</artifactId>
     </dependency>
 
-    <!-- Spring Security -->
-    <!--
-      <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-web</artifactId>
-      </dependency>
-
-      <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-config</artifactId>
-      </dependency>
-    -->
-
     <!-- for Object Relational Mapping (JPA/Hibernate) -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -147,38 +133,7 @@
     <!-- CXF for REST and Webservices -->
     <dependency>
       <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-rt-frontend-jaxws</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>asm</groupId>
-          <artifactId>asm</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-rt-rs-client</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-rs-service-description</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-rt-transports-http</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.fasterxml.jackson.jaxrs</groupId>
-      <artifactId>jackson-jaxrs-json-provider</artifactId>
     </dependency>
 
     <!-- Web Sockets -->
