Changes for review comment

--- a/samples/core/src/main/resources/config/application-mysql.properties
+++ b/samples/core/src/main/resources/config/application-mysql.properties
@@ -1,4 +1,4 @@
-spring.jpa.database=mysql
+#spring.jpa.database=mysql
 #spring.datasource.url=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 #spring.datasource.username=
@@ -6,6 +6,3 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #The following can be enabled in case of any errors in the SQL to investigate the issue by looking at SQL
 #spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mariadb://192.168.99.100:3306/restaurant
-spring.datasource.username=root
-spring.datasource.password=password
