--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -88,12 +88,6 @@
       <artifactId>spring-web</artifactId>
     </dependency>
 
-    <!-- JSP -->
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jstl</artifactId>
-    </dependency>
-
     <!-- Spring Security -->
     <!--
       <dependency>
@@ -213,27 +207,21 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+        <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </exclusion>
+        <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-jdbc</artifactId>
-    </dependency>
-
+         
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>2.10.4</version>
     </dependency>
 
     <dependency>
@@ -258,38 +246,53 @@
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
       <version>1.3.0</version>
-      <scope>test</scope>
+    <scope>test</scope>
     </dependency>
-
-    <!-- Uncomment the following dependency if the database used is MariaDB 10.0.27 -->
+	
+	<!-- Uncomment the following dependency if the database used is MariaDB 10.0.27 -->
     <!--
       <dependency>
-      <groupId>org.mariadb.jdbc</groupId>
-      <artifactId>mariadb-java-client</artifactId>
-      <version>1.5.4</version>
+        <groupId>org.mariadb.jdbc</groupId>
+        <artifactId>mariadb-java-client</artifactId>
+        <version>1.5.4</version>
       </dependency>
     -->
 
 
     <!-- Uncomment the following dependency if the database used is Oracle 11g -->
-    <!--  
-      <dependency>
-      <groupId>com.oracle</groupId>
-      <artifactId>ojdbc6</artifactId>
-      <version>11.2.0</version>
-      </dependency>
-    -->
-
-    <!-- Comment the following dependency if the database that is used is not PostGres 9.5.4 -->
     <!--
       <dependency>
+        <groupId>com.oracle</groupId>
+        <artifactId>ojdbc6</artifactId>
+        <version>11.2.0</version>
+      </dependency>
+     -->
+
+	<!-- Comment the following dependency if the database that is used is not PostGres 9.5.4 -->
+    <!--
+    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>9.4.1211.jre7</version>
-      </dependency>
+    </dependency>
     -->
   </dependencies>
-
+  
+  <profiles>
+    <profile>
+      <id>embedded</id>
+      <activation>
+       <activeByDefault>true</activeByDefault>
+      </activation>
+      <dependencies>
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId> 
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
+  
   <build>
     <resources>
       <resource>
