--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
-          <packagingExcludes>WEB-INF/classes/config/application.properties</packagingExcludes>
+          <packagingExcludes>WEB-INF/classes/config/application.properties,*.jsp</packagingExcludes>
           <warName>${project.artifactId}</warName>
         </configuration>
       </plugin>
