--- a/samples/server/pom.xml
+++ b/samples/server/pom.xml
@@ -96,6 +96,14 @@
               </execution>
             </executions>
           </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <configuration>
+              <packagingExcludes>WEB-INF/classes/config/application.properties</packagingExcludes>
+              <warName>${project.artifactId}</warName>
+            </configuration>
+          </plugin>
         </plugins>
       </build>
     </profile>
