oasp/oasp4j#358: heavily reworked and improved, made it work and integrate it into first test-case

--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -12,6 +12,9 @@ spring.profiles.active=junit
 #UnComment the following line in the case of PostGres 9.5.4 database
 #spring.profiles.active=junit,postgres
 
+#UnComment the following profile 'mysql' if the database used is MariaDB 10.0.27
+#spring.profiles.active=junit,mysql
+
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.clean-on-validation-error=true
@@ -26,6 +29,6 @@ database.migration.auto=false
 database.migration.testdata=false
 database.migration.clean=false
 
-
-#UnComment the following profile 'mysql' if the database used is MariaDB 10.0.27
-#spring.profiles.active=mysql
+# Service configuration
+service.client.app.restaurant.auth=basic
+service.client.app.restaurant.host=localhost
