--- a/modules/cxf-client/pom.xml
+++ b/modules/cxf-client/pom.xml
@@ -28,6 +28,10 @@
       <artifactId>cxf-rt-rs-client</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-test</artifactId>
       <scope>test</scope>
