--- a/modules/service/pom.xml
+++ b/modules/service/pom.xml
@@ -33,8 +33,13 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-core</artifactId>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot</artifactId>
       <optional>true</optional>
     </dependency>
     <dependency>
