Added version for spring-boot-starter-tomcat in core/pom.xml

--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -287,7 +287,8 @@
       <dependencies>
          <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId> 
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <version>${spring.boot.version}</version>
         </dependency>
       </dependencies>
     </profile>
