- new and improved appenders for console and file, some documentation. - MaskingConverter for confidential information, until OWASP issue is fixed.

--- a/modules/logging/src/main/resources/io/oasp/logging/logback/application-logging.properties
+++ b/modules/logging/src/main/resources/io/oasp/logging/logback/application-logging.properties
@@ -6,3 +6,4 @@ logPath=logs
 errorLogFile=error_log_${HOSTNAME}_${appname}
 infoLogFile=info_log_${HOSTNAME}_${appname}
 debugLogFile=debug_log_${HOSTNAME}_${appname}
+securLogFile=secur_log_${HOSTNAME}_${appname}
