added distributionManagement to pl-2.4

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -85,4 +85,17 @@
     </profile>
   </profiles>
 
+  <distributionManagement>
+    <repository>
+      <id>devon.releases</id>
+      <name>devon Releases</name>
+      <url>https://devon.s2-eu.capgemini.com/nexus/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>devon.snapshots</id>
+      <name>devon Snapshots</name>
+      <url>https://devon.s2-eu.capgemini.com/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
 </project>
