oasp/oasp4j#358: renamed modules to (spring-boot-)starter convention

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -20,8 +20,8 @@
     <module>service</module>
     <module>json</module>
     <module>rest</module>
-    <module>cxf-client</module>
-    <module>cxf-server</module>
+    <module>starter-cxf-client</module>
+    <module>starter-cxf-server</module>
     <module>security</module>
     <module>jpa</module>
     <module>jpa-envers</module>
