--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -316,12 +316,12 @@
       </dependency>
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
-        <artifactId>oasp4j-cxf-client</artifactId>
+        <artifactId>oasp4j-starter-cxf-client</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
-        <artifactId>oasp4j-cxf-server</artifactId>
+        <artifactId>oasp4j-starter-cxf-server</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
