--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -40,12 +40,12 @@
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
-      <artifactId>oasp4j-cxf-client</artifactId>
+      <artifactId>oasp4j-starter-cxf-client</artifactId>
     </dependency>
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
-      <artifactId>oasp4j-cxf-server</artifactId>
+      <artifactId>oasp4j-starter-cxf-server</artifactId>
     </dependency>
 
     <dependency>
