--- a/modules/starter-cxf-client/pom.xml
+++ b/modules/starter-cxf-client/pom.xml
@@ -28,6 +28,10 @@
       <artifactId>cxf-rt-rs-client</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-frontend-jaxws</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot</artifactId>
     </dependency>
