--- a/modules/logging/pom.xml
+++ b/modules/logging/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>org.owasp</groupId>
       <artifactId>security-logging-logback</artifactId>
-      <version>1.1.3</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
