--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <inceptionYear>2014</inceptionYear>
 
   <modules>
+    <module>bom-before-spring-boot</module>
     <module>bom</module>
     <module>modules</module>
     <module>templates</module>
@@ -21,7 +22,7 @@
     <java.version>1.7</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <oasp4j.version>2.4.0-SNAPSHOT</oasp4j.version>
+    <oasp4j.version>2.4.1-SNAPSHOT</oasp4j.version>
     <port.range>81</port.range>
     <oasp.flatten.mode>oss</oasp.flatten.mode>
     <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
