Add CSV mapper for REST server FIX #606
Module CSV

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -24,6 +24,7 @@
     <module>batch</module>
     <module>web</module>
     <module>basic</module>
+    <module>csv</module>
   </modules>
 
   <dependencyManagement>
