added folder migration/common moved common usable scripts to migration/common adapted flyway.locations-paths

--- a/samples/core/src/main/resources/config/application-h2file.properties
+++ b/samples/core/src/main/resources/config/application-h2file.properties
@@ -5,4 +5,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-flyway.locations=classpath:db/migration,classpath:db/migration/h2
+flyway.locations=classpath:db/migration/common,classpath:db/migration/h2
