--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -317,32 +317,32 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.oasp.java.modules</groupId>
+        <groupId>io.oasp.java.starters</groupId>
         <artifactId>oasp4j-starter-cxf-client</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.oasp.java.modules</groupId>
+        <groupId>io.oasp.java.starters</groupId>
         <artifactId>oasp4j-starter-cxf-client-rest</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.oasp.java.modules</groupId>
+        <groupId>io.oasp.java.starters</groupId>
         <artifactId>oasp4j-starter-cxf-client-ws</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.oasp.java.modules</groupId>
+        <groupId>io.oasp.java.starters</groupId>
         <artifactId>oasp4j-starter-cxf-server</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.oasp.java.modules</groupId>
+        <groupId>io.oasp.java.starters</groupId>
         <artifactId>oasp4j-starter-cxf-server-rest</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.oasp.java.modules</groupId>
+        <groupId>io.oasp.java.starters</groupId>
         <artifactId>oasp4j-starter-cxf-server-ws</artifactId>
         <version>${project.version}</version>
       </dependency>
