--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>bom</module>
     <module>modules</module>
+    <module>starters</module>
     <module>templates</module>
   </modules>
 
