--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -39,20 +39,20 @@
     </dependency>
 
     <dependency>
-      <groupId>io.oasp.java.modules</groupId>
+      <groupId>io.oasp.java.starters</groupId>
       <artifactId>oasp4j-starter-cxf-client-rest</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.oasp.java.modules</groupId>
+      <groupId>io.oasp.java.starters</groupId>
       <artifactId>oasp4j-starter-cxf-client-ws</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>io.oasp.java.modules</groupId>
+      <groupId>io.oasp.java.starters</groupId>
       <artifactId>oasp4j-starter-cxf-server-rest</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.oasp.java.modules</groupId>
+      <groupId>io.oasp.java.starters</groupId>
       <artifactId>oasp4j-starter-cxf-server-ws</artifactId>
     </dependency>
 
@@ -206,8 +206,8 @@
       <version>1.3.0</version>
     <scope>test</scope>
     </dependency>
-	
-	<!-- Uncomment the following dependency if the database used is MariaDB 10.0.27 -->
+
+	  <!-- Uncomment the following dependency if the database used is MariaDB 10.0.27 -->
     <!--
       <dependency>
         <groupId>org.mariadb.jdbc</groupId>
@@ -215,7 +215,6 @@
         <version>1.5.4</version>
       </dependency>
     -->
-
 
     <!-- Uncomment the following dependency if the database used is Oracle 11g -->
     <!--
@@ -226,7 +225,7 @@
       </dependency>
      -->
 
-	<!-- Comment the following dependency if the database that is used is not PostGres 9.5.4 -->
+    <!-- Comment the following dependency if the database that is used is PostGres 9 -->
     <!--
     <dependency>
       <groupId>org.postgresql</groupId>
