--- a/starters/starter-cxf-client-rest/pom.xml
+++ b/starters/starter-cxf-client-rest/pom.xml
@@ -4,24 +4,24 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.oasp.java.dev</groupId>
-    <artifactId>oasp4j-modules</artifactId>
+    <artifactId>oasp4j-starters</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
-  <groupId>io.oasp.java.modules</groupId>
-  <artifactId>oasp4j-starter-cxf-server-rest</artifactId>
+  <groupId>io.oasp.java.starters</groupId>
+  <artifactId>oasp4j-starter-cxf-client-rest</artifactId>
   <version>${oasp4j.version}</version>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
-  <description>Support for service server based on Apache CXF.</description>
+  <description>Support for service clients based on Apache CXF.</description>
 
   <dependencies>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>oasp4j-starter-cxf-server</artifactId>
+      <groupId>io.oasp.java.starters</groupId>
+      <artifactId>oasp4j-starter-cxf-client</artifactId>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>oasp4j-cxf-server-rest</artifactId>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-cxf-client-rest</artifactId>
     </dependency>
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
