--- a/starters/starter-cxf-client/pom.xml
+++ b/starters/starter-cxf-client/pom.xml
@@ -4,11 +4,11 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.oasp.java.dev</groupId>
-    <artifactId>oasp4j-modules</artifactId>
+    <artifactId>oasp4j-starters</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
-  <groupId>io.oasp.java.modules</groupId>
-  <artifactId>oasp4j-starter-cxf-client-ws</artifactId>
+  <groupId>io.oasp.java.starters</groupId>
+  <artifactId>oasp4j-starter-cxf-client</artifactId>
   <version>${oasp4j.version}</version>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
@@ -16,12 +16,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>oasp4j-starter-cxf-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>oasp4j-cxf-client-ws</artifactId>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-cxf-client</artifactId>
     </dependency>
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
