--- a/starters/starter-cxf-server/pom.xml
+++ b/starters/starter-cxf-server/pom.xml
@@ -4,10 +4,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.oasp.java.dev</groupId>
-    <artifactId>oasp4j-modules</artifactId>
+    <artifactId>oasp4j-starters</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
-  <groupId>io.oasp.java.modules</groupId>
+  <groupId>io.oasp.java.starters</groupId>
   <artifactId>oasp4j-starter-cxf-server</artifactId>
   <version>${oasp4j.version}</version>
   <packaging>jar</packaging>
@@ -16,7 +16,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>${project.groupId}</groupId>
+      <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-cxf-server</artifactId>
     </dependency>
     <dependency>
