--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -28,7 +28,9 @@
     <module>cxf-server-ws</module>
     <module>security</module>
     <module>jpa</module>
+    <module>jpa-dao</module>
     <module>jpa-envers</module>
+    <module>jpa-spring-data</module>
     <module>batch</module>
     <module>web</module>
     <module>basic</module>
