--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -63,6 +63,11 @@
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-jpa-dao</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-web</artifactId>
     </dependency>
 
@@ -181,30 +186,28 @@
         </exclusion>
       </exclusions>
     </dependency>
-         
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>com.mysema.querydsl</groupId>
+      <groupId>com.querydsl</groupId>
       <artifactId>querydsl-apt</artifactId>
-      <version>3.4.3</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>com.mysema.querydsl</groupId>
+      <groupId>com.querydsl</groupId>
       <artifactId>querydsl-jpa</artifactId>
-      <version>3.7.1</version>
     </dependency>
 
     <dependency>
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
       <version>1.3.0</version>
-    <scope>test</scope>
+      <scope>test</scope>
     </dependency>
 
 	  <!-- Uncomment the following dependency if the database used is MariaDB 10.0.27 -->
@@ -234,7 +237,7 @@
     </dependency>
     -->
   </dependencies>
-  
+
   <profiles>
     <profile>
       <id>embedded</id>
@@ -250,7 +253,7 @@
       </dependencies>
     </profile>
   </profiles>
-  
+
   <build>
     <resources>
       <resource>
